certificates/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        # add an annotation indicating the issuer to use.
        cert-manager.io/issuer: my-ca-cluster-issuer
    name: my-ingress
    namespace: default
spec:
    rules:
    - http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: myservice
              port:
                number: 80
    tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - secretName: root-secret # < cert-manager will store the created certificate in this secret.
